2006-09-01  Alexis Sukrieh  <sukria@backup-manager.org>

	* t/testlib.sh:
	  + That file was hit by bug#119 too, all the test scripts were broken.

2006-08-31  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/gettext.sh
	  + Do not source /usr/share/backup-manager but $libdir instead (was
	    breaking test scripts on boxes where BM isn't installed).
	* Replaced every #!/bin/sh by #!/bin/bash in test scripts.

2006-08-27  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/sanitize.sh:
	  + BM_UPLOAD_SSH_HOSTS, BM_UPLOAD_SSH_USER and
	    BM_UPLOAD_SSH_KEY are mandatory if BM_TARBALL_OVER_SSH is set to "true".
		(closes: #97).

2006-08-27  Alexis Sukrieh  <sukria@backup-manager.org>

	* backup-manager:
	  + Replaced static paths to external programs by $(which statement).
	    (closes: #114)
	* t/testlib.sh:
	  + Applied the same changes to the teslib.sh library so the test scripts
	    behave the same way.

2006-08-27  Alexis Sukrieh  <sukria@backup-manager.org>

	* BackupManager/Logger.pm:
	  + Applied patch from ilya margolin for propagating 
	    BM_LOGGER_FACILITY (closes #115).
	* backup-manager:
	  + Added a copyright header when BM is launched on verbose mode.

2006-08-07  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/backup-methods.sh:
	  + the dar build commandline is now working.
	    (closes: #109)

2006-08-05  Alexis Sukrieh  <sukria@backup-manager.org>

	* backup-manager:
	  + Possible to use BM with an unprivileged user thanks to the new path
	  used for the lockfile if run by a non-root user.

2006-08-05  Alexis Sukrieh  <sukria@backup-manager.org>

	* backup-manager-upload:
	* lib/upload-methods.sh:
	  + No more su to $BM_UPLOAD_USER, it's useless.
	    (closes: #105)

2006-07-05  Alexis Sukrieh  <sukria@backup-manager.org>
	
	[ Add support for local encryption with GPG - closes: #82 ]
	* backup-manager:
	  + path to /usr/bin/gpg
	* backup-manager.conf.tpl:
	  + New configuration variables
	    - BM_ENCRYPTION_METHOD (gpg, none)